[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "geoviews_examples"
description = "Notebooks showing geoviews example usage"
authors = [
    { name = "Sebastien Roche", email = "sroche@g.harvard.edu" }
]
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
urls."Homepage" = "https://github.com/rocheseb/geoviews_examples"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["version"]
dependencies = [
    "dask[dataframe]",
    "geoviews",
    "panel",
    "notebook",
    "OWSLib",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
license-files = ["LICENSE.md"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
write_to = "geoviews_examples/_version.py"
version_scheme = "post-release"